--- a/app/src/main/res/layout-xlarge/activity_disaster1.xml
+++ b/app/src/main/res/layout-xlarge/activity_disaster1.xml
@@ -7,6 +7,7 @@
     android:background="@android:color/background_light"
     tools:context=".disaster1"
     android:backgroundTint="#9b7653">
+
     <TextView
         android:id="@+id/textView26"
         android:layout_width="0dp"
@@ -16,26 +17,26 @@
         android:text="@string/tv_earthquake"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        android:textSize="20sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline74"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline73"
-        app:layout_constraintVertical_bias="0.083" />
+        app:layout_constraintVertical_bias="0.031" />
 
     <TextView
         android:id="@+id/textView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="422dp"
+        android:layout_height="48dp"
         android:text="@string/tv_pre1"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline74"
         app:layout_constraintEnd_toStartOf="@+id/guideline76"
-        app:layout_constraintHorizontal_bias="0.121"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline73"
-        app:layout_constraintVertical_bias="0.144" />
+        app:layout_constraintVertical_bias="0.119" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline73"
@@ -72,82 +73,83 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:includeFontPadding="true"
-        android:paddingLeft="10dp"
-        android:paddingTop="2dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
         android:text="@string/tv_pointearthquake_1"
         android:textColor="@android:color/background_dark"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline74"
         app:layout_constraintEnd_toStartOf="@+id/guideline76"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline73"
-        app:layout_constraintVertical_bias="0.632" />
+        app:layout_constraintVertical_bias="0.728" />
 
     <TextView
         android:id="@+id/textView30"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:includeFontPadding="true"
-        android:paddingLeft="10dp"
-        android:paddingTop="2dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
         android:text="@string/tv_pointearthquake_3"
         android:textColor="@android:color/background_dark"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline76"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.904" />
+        app:layout_constraintVertical_bias="0.914" />
 
     <TextView
         android:id="@+id/textView29"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:includeFontPadding="true"
-        android:paddingLeft="10dp"
-        android:paddingTop="2dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
         android:text="@string/tv_pointearthquake_2"
         android:textColor="@android:color/background_dark"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline74"
         app:layout_constraintEnd_toStartOf="@+id/guideline76"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline75"
         app:layout_constraintTop_toTopOf="@+id/guideline73"
-        app:layout_constraintVertical_bias="0.781" />
+        app:layout_constraintVertical_bias="0.825" />
 
     <TextView
         android:id="@+id/textView31"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:includeFontPadding="true"
-        android:paddingLeft="10dp"
-        android:paddingTop="2dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="20dp"
         android:text="@string/tv_pointearthquake_4"
         android:textColor="@android:color/background_dark"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="@+id/guideline75"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.988" />
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_view2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="782dp"
+        android:layout_height="235dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline74"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline73"
-        app:layout_constraintVertical_bias="0.29000002" />
+        app:layout_constraintVertical_bias="0.349" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
